# tar-rs

./: .clippy.toml  .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  README.md  appveyor.yml  crates.js  help.html  search-index.js  settings.html  source-files.js
.github/workflows/: ci.yml  main.yml  revdep.yml
examples/: extract_file.rs  list.rs  raw_list.rs  stream.rs  write.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: archive.rs  builder.rs  tar.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js
implementors/core/iter/traits/iterator/: trait.Iterator.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/ops/drop/: trait.Drop.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/std/io/: trait.Read.js
src/: archive.rs  builder.rs  entry.rs  entry_type.rs  error.rs  gnu.rs  header.rs  lib.rs  main.rs  pax.rs  reader.rs  realpath.rs  realpath_test_common.rs  realpath_test_unix.rs  streamer.rs  tempdir.rs
src/async/: header_block_writer.rs  header_writer.rs  mod.rs  pad.rs
src/tar/: archive.rs.html  builder.rs.html  entry.rs.html  entry_type.rs.html  error.rs.html  header.rs.html  lib.rs.html  pax.rs.html
src/tests/: directory.tar
tar/: all.html  enum.EntryType.html  enum.HeaderMode.html  enum.Unpacked.html  index.html  struct.Archive.html  struct.Builder.html  struct.Entries.html  struct.Entry.html  struct.GnuExtSparseHeader.html  struct.GnuHeader.html  struct.GnuSparseHeader.html  struct.Header.html  struct.OldHeader.html  struct.PaxExtension.html  struct.PaxExtensions.html  struct.UstarHeader.html
tests/: all.rs  entry.rs
tests/archives/: 7z_long_path.tar  biguid_gnu.tar  biguid_pax.tar  gnu-longname.tar  hard_link.tar  null_date.tar  ownership.tar  pax2.tar  pax3.tar  pax_size.tar  pax_sparse.tar  simple.tar  single.tar  sparse-1.tar  sparse-large.tar  sparse-n.sh  sparse.tar
tests/header/: mod.rs
xtask/: .gitignore  Cargo.toml
xtask/src/: main.rs  revdep_test.rs
