[package]

name = "tar"
version = "0.4.5"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
homepage = "https://github.com/alexcrichton/tar-rs"
repository = "https://github.com/alexcrichton/tar-rs"
documentation = "http://alexcrichton.com/tar-rs"
license = "MIT/Apache-2.0"
keywords = ["tar", "tarfile", "encoding"]
readme = "README.md"

description = """
A Rust implementation of a TAR file reader and writer. This library does not
currently handle compression, but it is abstract over all I/O readers and
writers. Additionally, great lengths are taken to ensure that the entire
contents are never required to be entirely resident in memory all at once.
"""

[dependencies]
libc = "0.2"
filetime = "0.1.5"

[dev-dependencies]
tempdir = "0.3"
