[package]
name = "tar"
version = "0.4.25"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
homepage = "https://github.com/alexcrichton/tar-rs"
repository = "https://github.com/alexcrichton/tar-rs"
documentation = "https://docs.rs/tar"
license = "MIT/Apache-2.0"
keywords = ["tar", "tarfile", "encoding"]
readme = "README.md"
edition = "2018"
exclude = ["tests/archives/*"]

description = """
A Rust implementation of a TAR file reader and writer. This library does not
currently handle compression, but it is abstract over all I/O readers and
writers. Additionally, great lengths are taken to ensure that the entire
contents are never required to be entirely resident in memory all at once.
"""

[dependencies]
filetime = "0.2.6"

[dev-dependencies]
tempdir = "0.3"

[target."cfg(unix)".dependencies]
xattr = { version = "0.2", optional = true }
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winnt"] }

[target.'cfg(target_os = "redox")'.dependencies]
redox_syscall = "0.1"

[features]
default = ["xattr"]
