[package]
name = "tar-fuzz"
version = "0.0.0"
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = "1.3.2"
tempfile = "3.3"

[dependencies.tar]
path = ".."

[[bin]]
name = "archive"
path = "fuzz_targets/archive.rs"
test = false
doc = false
bench = false

[[bin]]
name = "tar"
path = "fuzz_targets/tar.rs"
test = false
doc = false
bench = false
